--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -6,8 +6,10 @@ dependencies:
     - entity_browser.browser.image_browser_embed
     - field.field.group.project.field_address
     - field.field.group.project.field_audience
+    - field.field.group.project.field_body_content
     - field.field.group.project.field_display_date
     - field.field.group.project.field_email
+    - field.field.group.project.field_embedded_page
     - field.field.group.project.field_enable_documents_menu_item
     - field.field.group.project.field_enable_events_menu_item
     - field.field.group.project.field_enable_guides_and_informat
@@ -36,6 +38,7 @@ dependencies:
     - field_group
     - maxlength
     - telephone
+    - text
 third_party_settings:
   field_group:
     group_site_menu:
@@ -46,7 +49,7 @@ third_party_settings:
         - field_enable_documents_menu_item
         - field_enable_projects_menu_item
       parent_name: ''
-      weight: 15
+      weight: 17
       format_type: fieldset
       format_settings:
         id: ''
@@ -61,7 +64,7 @@ bundle: project
 mode: default
 content:
   field_address:
-    weight: 9
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: address_default
@@ -72,21 +75,35 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
+  field_body_content:
+    weight: 8
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
   field_display_date:
     type: string_textfield
-    weight: 14
+    weight: 16
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   field_email:
-    weight: 11
+    weight: 13
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: email_default
+    region: content
+  field_embedded_page:
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   field_enable_documents_menu_item:
     weight: 14
@@ -124,7 +141,7 @@ content:
     type: boolean_checkbox
     region: content
   field_end_date:
-    weight: 13
+    weight: 15
     settings:
       title: ''
       format: mm/dd/yyyy
@@ -182,7 +199,7 @@ content:
     type: bootstrap_date_widget
     region: content
   field_featured_content:
-    weight: 16
+    weight: 18
     settings:
       match_operator: CONTAINS
       size: 60
@@ -191,7 +208,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_featured_groups:
-    weight: 17
+    weight: 19
     settings:
       match_operator: CONTAINS
       size: 60
@@ -215,7 +232,7 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 18
+    weight: 20
     settings:
       size: 60
       placeholder: ''
@@ -229,14 +246,14 @@ content:
     type: chosen_select
     region: content
   field_phone:
-    weight: 10
+    weight: 12
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: telephone_default
     region: content
   field_project_status:
-    weight: 8
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -248,7 +265,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_search_keywords:
-    weight: 19
+    weight: 21
     settings:
       size: 60
       placeholder: ''
@@ -264,7 +281,7 @@ content:
     type: string_textfield
     region: content
   field_start_date:
-    weight: 12
+    weight: 14
     settings:
       title: ''
       format: mm/dd/yyyy
