--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -5,8 +5,10 @@ dependencies:
   config:
     - field.field.group.project.field_address
     - field.field.group.project.field_audience
+    - field.field.group.project.field_body_content
     - field.field.group.project.field_display_date
     - field.field.group.project.field_email
+    - field.field.group.project.field_embedded_page
     - field.field.group.project.field_enable_documents_menu_item
     - field.field.group.project.field_enable_events_menu_item
     - field.field.group.project.field_enable_guides_and_informat
@@ -31,6 +33,7 @@ dependencies:
     - datetime
     - ds
     - field_group
+    - text
 third_party_settings:
   ds:
     layout:
@@ -45,11 +48,13 @@ third_party_settings:
         - group_date
         - field_summary
         - group_site_menu_entity_view_1
-        - field_featured_content
+        - field_body_content
         - field_display_date
-        - field_featured_groups
+        - field_embedded_page
         - field_start_date
+        - field_featured_content
         - field_end_date
+        - field_featured_groups
   field_group:
     group_date:
       children:
@@ -76,6 +81,13 @@ targetEntityType: group
 bundle: project
 mode: default
 content:
+  field_body_content:
+    weight: 4
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
   field_display_date:
     weight: 5
     label: hidden
@@ -84,6 +96,22 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_embedded_page:
+    type: entity_reference_entity_view
+    weight: 5
+    region: content
+    label: hidden
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_end_date:
     type: datetime_default
     weight: 7
@@ -101,7 +129,7 @@ content:
             lb-col: false
             classes: {  }
   field_featured_content:
-    weight: 4
+    weight: 6
     label: above
     settings:
       view_mode: featured
@@ -119,7 +147,7 @@ content:
     region: content
   field_featured_groups:
     type: entity_reference_entity_view
-    weight: 5
+    weight: 7
     region: content
     label: above
     settings:
