--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -107,7 +107,7 @@ content:
     weight: 6
     label: above
     settings:
-      view_mode: default
+      view_mode: teaser
       link: false
     third_party_settings:
       ds:
