--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -31,6 +31,7 @@ dependencies:
     - field.storage.node.field_summary
     - field.storage.node.field_topics
     - search_api.server.searchstax
+    - core.entity_view_mode.node.teaser
 third_party_settings:
   search_api_solr:
     finalize: false
@@ -312,21 +313,32 @@ field_settings:
         anonymous: anonymous
       view_mode:
         'entity:group':
+          advisory_group: default
           bureau_office: default
           elected_official: default
           program: default
           project: default
         'entity:node':
+          calendar_item: default
+          charter_article: default
+          charter_chapter: default
+          charter_section: default
           city_service: default
+          code_chapter: default
+          code_section: default
+          code_title: default
+          council_document: default
+          council_meeting: default
+          development_permit: default
           event: default
-          guide: default
-          information: default
+          external_resource: teaser
+          location: default
           news: default
           page: default
+          park_facility: default
+          policy: default
         'entity:taxonomy_term':
           audience: default
-          community_actions: default
-          topics: default
   term_description:
     label: Description
     datasource_id: 'entity:taxonomy_term'
