--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser_embed
     - field.field.group.elected_official.field_address
     - field.field.group.elected_official.field_building
     - field.field.group.elected_official.field_bureaus
@@ -19,20 +20,18 @@ dependencies:
     - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
+    - field.field.group.elected_official.field_person
     - field.field.group.elected_official.field_phone
-    - field.field.group.elected_official.field_portrait
     - field.field.group.elected_official.field_search_keywords
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - field.field.group.elected_official.field_twitter
     - group.type.elected_official
-    - image.style.portrait_3_4_285w
   module:
     - address
     - cleave
+    - entity_browser
     - field_group
-    - focal_point
-    - lightning_media
     - maxlength
 third_party_settings:
   field_group:
@@ -160,6 +159,21 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_person:
+    type: entity_browser_entity_reference
+    weight: 2
+    settings:
+      entity_browser: image_browser_embed
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: person
+      field_widget_replace: false
+      open: false
+    region: content
+    third_party_settings: {  }
   field_phone:
     weight: 8
     settings:
@@ -168,19 +182,6 @@ content:
     third_party_settings: {  }
     type: telephone_cleave
     region: content
-  field_portrait:
-    type: image_focal_point
-    weight: 2
-    settings:
-      preview_image_style: portrait_3_4_285w
-      preview_link: true
-      offsets: '50,50'
-      progress_indicator: throbber
-    region: content
-    third_party_settings:
-      lightning_media:
-        file_links: true
-        remove_button: true
   field_shortname_or_acronym:
     weight: 1
     settings:
