--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -19,18 +19,16 @@ dependencies:
     - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_menu_link
     - field.field.group.elected_official.field_official_title
+    - field.field.group.elected_official.field_person
     - field.field.group.elected_official.field_phone
-    - field.field.group.elected_official.field_portrait
     - field.field.group.elected_official.field_search_keywords
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - field.field.group.elected_official.field_twitter
     - group.type.elected_official
-    - image.style.portrait_3_4_285w
   module:
     - address
     - ds
-    - image
     - telephone
 third_party_settings:
   ds:
@@ -58,7 +56,7 @@ third_party_settings:
         - field_summary
         - group_site_menu_entity_view_1
       top_right:
-        - field_portrait
+        - field_person
       center_left:
         - field_email
         - field_phone
@@ -140,22 +138,13 @@ content:
     third_party_settings: {  }
     type: string
     region: center_center
-  field_phone:
-    type: telephone_link
-    weight: 4
-    region: center_left
-    label: visually_hidden
-    settings:
-      title: ''
-    third_party_settings: {  }
-  field_portrait:
-    type: image
+  field_person:
+    type: entity_reference_entity_view
     weight: 2
-    region: top_right
     label: hidden
     settings:
-      image_style: portrait_3_4_285w
-      image_link: ''
+      view_mode: person
+      link: false
     third_party_settings:
       ds:
         ft:
@@ -164,6 +153,15 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
+    region: top_right
+  field_phone:
+    type: telephone_link
+    weight: 4
+    region: center_left
+    label: visually_hidden
+    settings:
+      title: ''
+    third_party_settings: {  }
   field_summary:
     type: string
     weight: 0
