--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -83,6 +83,8 @@ module:
   inline_entity_form: 0
   inline_form_errors: 0
   key: 0
+  layout_builder: 0
+  layout_builder_st: 0
   layout_discovery: 0
   leaflet: 0
   leaflet_views: 0
