--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -95,6 +95,8 @@ inline_form_errors: 0.0.0
 jsonapi: 0.0.0
 key: 1.8.0
 kint: 1.2.0
+layout_builder: 8.7.8
+layout_builder_st: 1.0.0-alpha1
 layout_discovery: 0.0.0
 leaflet: 1.18.0
 leaflet_views: 1.18.0
