--- a/web/sites/default/config/core.entity_form_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.page.default.yml
@@ -9,8 +9,10 @@ dependencies:
     - field.field.node.page.field_featured_media
     - field.field.node.page.field_group
     - field.field.node.page.field_include_in_group_menu
+    - field.field.node.page.field_include_in_menu
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_menu_link_text
+    - field.field.node.page.field_menu_parent
     - field.field.node.page.field_page_type
     - field.field.node.page.field_popular
     - field.field.node.page.field_related_content
@@ -35,18 +37,18 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 16
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   field_audience:
-    weight: 7
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_body_content:
-    weight: 10
+    weight: 8
     settings:
       rows: 5
       placeholder: ''
@@ -55,7 +57,7 @@ content:
     region: content
   field_featured_media:
     type: entity_browser_entity_reference
-    weight: 8
+    weight: 6
     settings:
       entity_browser: image_browser_embed
       field_widget_display: rendered_entity
@@ -68,15 +70,15 @@ content:
       open: false
     region: content
     third_party_settings: {  }
-  field_include_in_group_menu:
-    weight: 4
+  field_include_in_menu:
+    weight: 15
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_legacy_path:
-    weight: 12
+    weight: 10
     settings:
       size: 60
       placeholder: ''
@@ -84,7 +86,7 @@ content:
     type: string_textfield
     region: content
   field_menu_link_text:
-    weight: 5
+    weight: 17
     settings:
       size: 60
       placeholder: ''
@@ -93,8 +95,8 @@ content:
         maxlength_js: 60
         maxlength_js_label: 'Menu links should be shorter than @limit characters, remaining: <strong>@remaining</strong>'
       conditional_fields:
-        993deee4-7b53-4d3d-a1b1-6b5e79ad6c19:
-          dependee: field_include_in_group_menu
+        27d27de9-09ce-40ed-a9e1-bfd47343334c:
+          dependee: field_include_in_menu
           settings:
             state: visible
             condition: checked
@@ -112,6 +114,33 @@ content:
           bundle: page
     type: string_textfield
     region: content
+  field_menu_parent:
+    weight: 16
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings:
+      conditional_fields:
+        8b28705c-6e9c-41f9-b265-78f43531728f:
+          dependee: field_include_in_menu
+          settings:
+            state: visible
+            condition: checked
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              value: false
+            effect: show
+            effect_options: {  }
+            selector: ''
+            form_mode: default
+          entity_type: node
+          bundle: page
+    type: entity_reference_autocomplete
+    region: content
   field_page_type:
     weight: 2
     settings: {  }
@@ -126,7 +155,7 @@ content:
     type: boolean_checkbox
     region: content
   field_related_content:
-    weight: 11
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -135,7 +164,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 18
+    weight: 19
     settings:
       match_operator: CONTAINS
       size: 60
@@ -144,7 +173,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 17
+    weight: 18
     settings:
       size: 60
       placeholder: ''
@@ -152,7 +181,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 9
+    weight: 7
     settings:
       rows: 2
       placeholder: ''
@@ -165,7 +194,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 6
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -181,13 +210,13 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 19
+    weight: 20
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 13
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -204,7 +233,7 @@ content:
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 15
+    weight: 13
     region: content
     settings:
       match_operator: CONTAINS
@@ -212,12 +241,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 14
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   field_group: true
+  field_include_in_group_menu: true
   promote: true
   status: true
   sticky: true
