--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -8,8 +8,10 @@ dependencies:
     - field.field.node.page.field_featured_media
     - field.field.node.page.field_group
     - field.field.node.page.field_include_in_group_menu
+    - field.field.node.page.field_include_in_menu
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_menu_link_text
+    - field.field.node.page.field_menu_parent
     - field.field.node.page.field_page_type
     - field.field.node.page.field_popular
     - field.field.node.page.field_related_content
@@ -95,6 +97,16 @@ content:
     third_party_settings: {  }
     type: boolean
     region: content
+  field_include_in_menu:
+    weight: 6
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
   field_menu_link_text:
     weight: 5
     label: above
@@ -102,6 +114,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_menu_parent:
+    weight: 7
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_summary:
     type: string
