--- a/web/sites/default/config/core.entity_view_display.node.council_document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_document.default.yml
@@ -21,6 +21,11 @@ targetEntityType: node
 bundle: council_document
 mode: default
 content:
+  agenda_items_on_document_entity_view_1:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   field_body_content:
     weight: 4
     label: hidden
