--- a/web/sites/default/config/core.entity_view_display.node.council_document.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_document.teaser.yml
@@ -51,6 +51,11 @@ targetEntityType: node
 bundle: council_document
 mode: teaser
 content:
+  agenda_items_on_document_entity_view_1:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   field_bureau:
     type: entity_reference_label
     weight: 4
