POWR-1535 enabled contact fields on groups, added social media fields to bureau/office and program, updated some defaults and labels

--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -15,9 +15,11 @@ dependencies:
     - field.field.group.program.field_enable_programs_menu_item
     - field.field.group.program.field_enable_projects_menu_item
     - field.field.group.program.field_enable_services_and_inform
+    - field.field.group.program.field_facebook
     - field.field.group.program.field_featured_content
     - field.field.group.program.field_featured_groups
     - field.field.group.program.field_featured_media
+    - field.field.group.program.field_instagram
     - field.field.group.program.field_location
     - field.field.group.program.field_logo
     - field.field.group.program.field_menu_link
@@ -27,6 +29,7 @@ dependencies:
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
     - field.field.group.program.field_topics
+    - field.field.group.program.field_twitter
     - group.type.program
     - image.style.thumbnail
   module:
@@ -46,6 +49,9 @@ third_party_settings:
         - field_location
         - field_phone
         - field_email
+        - field_facebook
+        - field_twitter
+        - field_instagram
         - field_building
       parent_name: ''
       weight: 5
@@ -67,7 +73,7 @@ third_party_settings:
         - field_enable_programs_menu_item
         - field_enable_projects_menu_item
       parent_name: ''
-      weight: 9
+      weight: 12
       format_type: fieldset
       format_settings:
         id: ''
@@ -94,7 +100,7 @@ content:
     type: chosen_select
     region: content
   field_building:
-    weight: 10
+    weight: 13
     settings:
       match_operator: CONTAINS
       size: 60
@@ -159,8 +165,16 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_facebook:
+    weight: 10
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_featured_content:
-    weight: 11
+    weight: 13
     settings:
       match_operator: CONTAINS
       size: 60
@@ -169,7 +183,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_featured_groups:
-    weight: 12
+    weight: 14
     settings:
       match_operator: CONTAINS
       size: 60
@@ -192,6 +206,14 @@ content:
       open: false
     region: content
     third_party_settings: {  }
+  field_instagram:
+    weight: 12
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_location:
     weight: 7
     settings:
@@ -216,7 +238,7 @@ content:
     region: content
     third_party_settings: {  }
   field_menu_link:
-    weight: 14
+    weight: 16
     settings: {  }
     third_party_settings: {  }
     type: menu_link_default
@@ -237,14 +259,14 @@ content:
     region: content
   field_redirects:
     type: string_textfield
-    weight: 50
+    weight: 17
     region: content
     settings:
       placeholder: ''
       size: 60
     third_party_settings: {  }
   field_search_keywords:
-    weight: 13
+    weight: 15
     settings:
       size: 60
       placeholder: ''
@@ -277,6 +299,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
+    region: content
+  field_twitter:
+    weight: 11
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   label:
     type: string_textfield
