--- a/web/sites/default/config/field.field.group.elected_official.field_address.yml
+++ b/web/sites/default/config/field.field.group.elected_official.field_address.yml
@@ -16,11 +16,25 @@ id: group.elected_official.field_address
 field_name: field_address
 entity_type: group
 bundle: elected_official
-label: Address
-description: 'Please provide the mailing address for this office.'
+label: 'Mailing Address'
+description: ''
 required: false
 translatable: true
-default_value: {  }
+default_value:
+  -
+    langcode: ''
+    country_code: US
+    administrative_area: null
+    locality: null
+    dependent_locality: null
+    postal_code: null
+    sorting_code: null
+    address_line1: null
+    address_line2: null
+    organization: null
+    given_name: null
+    additional_name: null
+    family_name: null
 default_value_callback: ''
 settings:
   available_countries:
